WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50667
[Qt] [WK2] IPC messages are not sent until send buffer fills up
https://bugs.webkit.org/show_bug.cgi?id=50667
Summary
[Qt] [WK2] IPC messages are not sent until send buffer fills up
Kimmo Kinnunen
Reported
2010-12-07 22:23:56 PST
IPC messages are not sent until send buffer fills up. This causes page loads not start until enough messages are sent. Can be witnessed by starting a load and observing that the load doesn't start until enough mouse clicks have been made.
Attachments
Patch to fix the problem
(1.03 KB, patch)
2010-12-08 23:43 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2010-12-08 23:43:51 PST
Created
attachment 76019
[details]
Patch to fix the problem
WebKit Commit Bot
Comment 2
2010-12-09 05:11:24 PST
Comment on
attachment 76019
[details]
Patch to fix the problem Rejecting patch 76019 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 1 ERROR: Working directory has local commits, pass --force-clean to continue. Full output:
http://queues.webkit.org/results/6941015
Kenneth Rohde Christiansen
Comment 3
2010-12-10 00:25:28 PST
Eric, any idea why the cq is acting like this?
Eric Seidel (no email)
Comment 4
2010-12-10 00:36:29 PST
It's unclear. However Adam just landed a change today which we hope will fix it. :(
WebKit Commit Bot
Comment 5
2010-12-10 02:50:05 PST
Comment on
attachment 76019
[details]
Patch to fix the problem Clearing flags on attachment: 76019 Committed
r73709
: <
http://trac.webkit.org/changeset/73709
>
WebKit Commit Bot
Comment 6
2010-12-10 02:50:11 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2010-12-10 11:46:17 PST
http://trac.webkit.org/changeset/73709
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug