2010-12-10  Kimmo Kinnunen  <kimmo.t.kinnunen@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Flush IPC connection send buffer after each message.

        [Qt] [WK2] IPC messages are not sent until send buffer fills up
        https://bugs.webkit.org/show_bug.cgi?id=50667

        * Platform/CoreIPC/qt/ConnectionQt.cpp:
        (CoreIPC::Connection::sendOutgoingMessage):

Canonical link: https://commits.webkit.org/64116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73709 268f45cc-cd09-0410-ab3c-d52691b4dbfc